[package]
name = "ochre"
version = "0.1.0"
authors = ["Micah Johnston <micah@glowcoil.com>"]
edition = "2018"
description = "High-quality anti-aliased vector graphics rendering on the GPU"
repository = "https://github.com/glowcoil/ochre"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]

[dev-dependencies]
glutin = "0.21.0"
gl = "0.11.0"
usvg = "0.13.0"
