[package]
name = "ochre"
version = "0.2.0"
authors = ["Micah Johnston <micah@glowcoil.com>"]
edition = "2018"
description = "High-quality anti-aliased vector graphics rendering on the GPU"
repository = "https://github.com/glowcoil/ochre"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]

[dev-dependencies]
glutin = "0.27"
gl = "0.14"
usvg = "0.19"
